--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.carpoolbuddy">
+    package="com.example.carpoolbuddy" >
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -8,16 +15,41 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CarpoolBuddy">
+        android:theme="@style/Theme.CarpoolBuddy" >
         <activity
-            android:name=".AuthActivity.CompleteSignUpActivity"
+            android:name=".vehicle.maps.MapsActivity"
+            android:exported="true" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <activity
+            android:name=".auth.CompleteSignUpActivity"
             android:exported="true" />
         <activity
-            android:name=".AuthActivity.SignUpActivity"
+            android:name=".auth.SignUpActivity"
             android:exported="true" />
         <activity
-            android:name=".AuthActivity.SignInActivity"
-            android:exported="true">
+            android:name=".auth.SignInActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,19 +57,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".userInfoActivity.UserInfoActivity"
+            android:name=".vehicle.AddVehicleActivity"
             android:exported="true" />
         <activity
-            android:name=".AddVehicleActivity"
+            android:name=".vehicle.VehicleProfileActivity"
             android:exported="true" />
         <activity
-            android:name=".VehicleProfileActivity"
+            android:name=".vehicle.VehiclesInfoActivity"
             android:exported="true" />
         <activity
-            android:name=".VehiclesInfoActivity"
-            android:exported="true" />
-        <activity
-            android:name=".UserProfileActivity"
+            android:name=".user.UserProfileActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
