--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.carpoolbuddy" >
+    package="com.example.carpoolbuddy">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -15,9 +15,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CarpoolBuddy" >
+        android:theme="@style/Theme.CarpoolBuddy">
         <activity
-            android:name=".vehicle.maps.MapsActivity"
+            android:name=".user.WalletActivity"
+            android:exported="true" />
+        <activity
+            android:name=".vehicle.MapsActivity"
             android:exported="true" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -49,7 +52,7 @@
             android:exported="true" />
         <activity
             android:name=".auth.SignInActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
